[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/EquipItemVarUI.gd" type="Script" id=1]

[node name="EquipItemVarUI" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Head"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 37.0
margin_right = 1160.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AutoCheckBox" type="CheckBox" parent="."]
margin_left = 1164.0
margin_right = 1280.0
margin_bottom = 24.0
text = "Auto re-equip"

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="AutoCheckBox" to="." method="_on_AutoCheckBox_toggled"]
